--- a/programs/amm/Cargo.toml
+++ b/programs/amm/Cargo.toml
@@ -25,7 +25,7 @@ paramset = []
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = {version = "0.29.0", features = ["metadata"]}
-solana-program = "<1.17.0"
+solana-program = "1.18.2"
 spl-memo = "4.0.0"
 uint = "0.9.1"
 mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
